<?xml version="1.0"?>
<package format="2">
  <name>gnss_msgs</name>
  <version>1.0.0</version>
  <description>Simple message types for Raw GNSS data.</description>

  <!-- meta information -->
  <maintainer email="tipf@hrz.tu-chemnitz.de">Tim Pfeifer</maintainer>
  
  <author email="weisong.wen@connect.polyu.hk">Weisong Wen</author> 
  <author email="tipf@hrz.tu-chemnitz.de">Tim Pfeifer</author> 

  <url type="website">https://github.com/TUC-ProAut/gnss_converter</url> 
  
  <license>GPLv3</license>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
