<?xml version="1.0"?>
<package format="2">
  <name>gnss_preprocessor</name>
  <version>1.0.0</version>
  <description>The gnss_preprocessor package</description>

  <!-- meta information -->
  <maintainer email="tipf@hrz.tu-chemnitz.de">Tim Pfeifer</maintainer>
  
  <author email="weisong.wen@connect.polyu.hk">Weisong Wen</author> 
  <author email="tipf@hrz.tu-chemnitz.de">Tim Pfeifer</author> 

  <url type="website">https://github.com/TUC-ProAut/gnss_converter</url> 
  
  <license>GPLv3</license>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gnss_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gnss_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

</package>
